# bavard-ml-utils

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-test.txt  setup.cfg  setup.py
.circleci/: config.yml
bavard_ml_common/: config.py  utils.py
bavard_ml_common/gcp/: gcs.py  pub_sub.py
bavard_ml_common/ml/: dataset.py  utils.py
bavard_ml_common/mlops/: errors.py  gcs.py  pub_sub.py  serialization.py  web_service.py
bavard_ml_common/mlops/persistence/: artifact_manager.py
bavard_ml_common/persistence/: artifact_manager.py
bavard_ml_common/persistence/record_store/: base.py  firestore.py  memory.py
bavard_ml_common/types/: agent.py  data.py  nlu.py  utils.py
bavard_ml_common/types/conversations/: actions.py  conversation.py  dialogue_turns.py  utils.py
bavard_ml_common/web/: errors.py
bavard_ml_utils/aws/: s3.py
bavard_ml_utils/gcp/: __init__.py  gcs.py  logging.py  pub_sub.py
bavard_ml_utils/ml/: __init__.py  conv_graph.py  dataset.py  utils.py
bavard_ml_utils/persistence/: __init__.py  artifact_manager.py  serialization.py
bavard_ml_utils/persistence/record_store/: __init__.py  base.py  dynamodb.py  firestore.py  memory.py
bavard_ml_utils/types/: __init__.py  agent.py  data.py  ml.py  nlu.py  utils.py
bavard_ml_utils/types/conversations/: __init__.py  actions.py  conversation.py  dialogue_turns.py
bavard_ml_utils/web/: __init__.py  errors.py  web_service.py
dockerfiles/: Dockerfile  docker-compose.yml  firestore.Dockerfile  pubsub.Dockerfile  test.Dockerfile
docs/: .firebaserc  conf.py  firebase.json  index.md
docs/_static/css/: custom.css
scripts/: build-docs.sh  deploy-docs.sh  lint-and-test-package.sh  publish.sh  wait-then-run-tests.sh
test/: config.py  test_webservice.py  utils.py
test/aws/: test_s3.py
test/data/agents/: bavard.json  invalid-nlu-examples.json  no-intents-in-convs.json  ood.json  test-agent.json  toy.json
test/data/conversations/: last-turn-user.json
test/gcp/: test_gcs.py  test_logging.py  test_pubsub.py
test/ml/: test_conv_graph.py  test_labeled_dataset.py  test_utils.py
test/mlops/: test_artifact_manager.py  test_gcs.py  test_pubsub.py  test_record_store.py  test_serialization.py  test_web_service.py  test_webservice.py
test/persistence/: test_artifact_manager.py  test_record_store.py  test_serialization.py
test/types/: test_agent.py  test_conversation.py  test_conversation_dataset.py  test_data.py  test_dialogue_turns.py  test_nlu_training_data.py  test_utils.py
test/web/: test_web_service.py
(+2 files in other folders)
