[tool.poetry]
name = "bavard-ml-common"
version = "0.1.19"
description = "Machine learning and Python web service utilities"
authors = ["Bavard AI, Inc. <dev@bavard.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
pydantic = "^1.7.3"
google-cloud-storage = "^1.35.1"
google-cloud-pubsub = "^2.2.0"
google-cloud-error-reporting = "^1.1.1"
numpy = {version = "^1.15.4", optional = true}
scikit-learn = {version = "^0.24.2", optional = true}
requests = "^2.21.0"
loguru = "^0.5.1"
google-cloud-firestore = "^2.3.2"

[tool.poetry.dev-dependencies]
torch = "^1.9.1"
transformers = "^4.10.2"
tensorflow = "^2.6.0"
sentencepiece = "^0.1.96"

[tool.poetry.extras]
ml = ["numpy", "scikit-learn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
